# sciplots

./: .gitignore  README.md  pyproject.toml
examples/: comparison_plot.py
sciplots/: __init__.py  axes.py  params.py
