[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciplot"
version = "0.1.0"
description = "A plot utility package"
authors = [
    {name = "Romain Simon", email = "romainljsimon@gmail.com"}
]
license = {text = "MIT"}
dependencies = [
    "matplotlib"
]

readme = "README.md"
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/romainljsimon/sciplots/"