[project]
name = "sciplots"
version = "0.1.0"
description = "A plot utility package"
authors = [
    {name = "Romain Simon", email = "romainljsimon@gmail.com"}
]
license = {text = "GPLv3"}
dependencies = [
    "matplotlib",
    "numpy"
]

readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
repository = "https://github.com/romainljsimon/sciplots/"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
